--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@testing-library/react-native": "^6.0.0",
     "axios": "^0.21.0",
     "intl": "^1.2.5",
+    "normalize-text": "^2.3.1",
     "react": "16.13.1",
     "react-native": "0.63.3",
     "react-native-gesture-handler": "^1.8.0",
