--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/jest-native": "^3.4.3",
     "@testing-library/react-native": "^6.0.0",
     "axios": "^0.21.0",
+    "date-fns": "^2.17.0",
     "intl": "^1.2.5",
     "normalize-text": "^2.3.1",
     "react": "16.13.1",
